--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.511.0",
     "mermaid": "^11.6.0",
     "nanostores": "^1.0.1",
